--- a/templates/All_articles.html
+++ b/templates/All_articles.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="{% static 'styles/buttons.css' %}">
 <link rel="stylesheet" href="{% static 'styles/Global.css' %}">
 <link rel="stylesheet" href="{% static 'styles/hero.css' %}">
+<link rel="stylesheet" href="{% static 'styles/Root.css' %}">
+
 
 
 
@@ -32,7 +34,7 @@
             <!-- Article Group 1 -->
             <div class="yellow-box-item">
                 <h3>Statistics</h3>
-                <img src="{% static 'Images/Statistics/1.jpg' %}" class="img-rectangle" alt="Introduction to Statistics">
+                <img src="{% static 'Images/Statistics/1.jpg' %}" class="img-rectangle" alt="Introduction to Statistics" style=" height: 300px; object-fit: cover;">
                 <p>Unlock the basics of statistics through interactive lessons and real-world study cases. Start with fundamental
                     concepts, practice calculating statistical measures, and explore how statistics play a critical role in data
                     analysis and decision-making across fields.</p>
@@ -42,7 +44,7 @@
             <!-- Article Group 2 -->
             <div class="yellow-box-item visible">
                 <h3>Introduction to Bioinformatics</h3>
-                <img src="{% static 'Images/Bioinformatics/1.jpg' %}" class="img-rectangle" alt="Introduction to Bioinformatics">
+                <img src="{% static 'Images/Bioinformatics/1.jpg' %}" class="img-rectangle" alt="Introduction to Bioinformatics" style=" height: 300px; object-fit: cover;">
                 <p>Dive into the exciting world of bioinformatics! Through hands-on exercises and real data, explore how bioinformatics
                     revolutionizes our understanding of biological data, from gene sequencing to protein structure analysis. Perfect
                     for those interested in the intersection of biology and data science.</p>
@@ -52,7 +54,7 @@
             <!-- Article Group 3 -->
             <div class="yellow-box-item visible">
                 <h3>Machine Learning</h3>
-                <img src="{% static 'Images/Machine learning/1.jpg' %}" class="img-rectangle" alt="Introduction to Machine Learning">
+                <img src="{% static 'Images/Machine learning/1.jpg' %}" class="img-rectangle" alt="Introduction to Machine Learning" style=" height: 300px; object-fit: cover;">
                 <p>Discover the core principles of machine learning with interactive lessons and applications. Learn how algorithms
                     can make predictions, detect patterns, and drive insights across disciplines. This section offers study cases
                     to help you apply machine learning methods to practical problems.</p>
@@ -62,7 +64,7 @@
             <!-- Article Group 4 -->
             <div class="yellow-box-item">
                 <h3>Work in Progress</h3>
-                <img src="{% static 'Images/Work in progress/1.png' %}" class="img-rectangle" alt="Work in progress">
+                <img src="{% static 'Images/Work in progress/1.png' %}" class="img-rectangle" alt="Work in progress" style=" height: 300px; object-fit: cover;">
                 <p>Get a sneak peek into topics under development. </p>
                 <a href="/statistics">Explore</a>
             </div>
