--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="{% static 'styles/Contact.css' %}">
     <link rel="stylesheet" href="{% static 'styles/Global.css' %}">
     <link rel="stylesheet" href="{% static 'styles/hero.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/Root.css' %}">
+
 
     <title>Contact</title>
 </head>
