--- a/templates/Home.html
+++ b/templates/Home.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="{% static 'styles/Home.css' %}">
 <link rel="stylesheet" href="{% static 'styles/Global.css' %}">
 <link rel="stylesheet" href="{% static 'styles/Image_style.css' %}">
+<link rel="stylesheet" href="{% static 'styles/Root.css' %}">
 
 
 
