--- a/templates/Work_in_progress.html
+++ b/templates/Work_in_progress.html
@@ -4,6 +4,10 @@
 <link rel="stylesheet" href="{% static 'styles/image_style.css' %}">
 <link rel="stylesheet" href="{% static 'styles/All_articles.css' %}">
 <link rel="stylesheet" href="{% static 'styles/Global.css' %}">
+<link rel="stylesheet" href="{% static 'styles/Root.css' %}">
+<link rel="stylesheet" href="{% static 'styles/hero.css' %}">
+
+
 
 
 <!DOCTYPE html>
