--- a/static/styles/Contact.css
+++ b/static/styles/Contact.css
@@ -21,20 +21,20 @@
     min-width: 350px;
     max-width: 600px;
     padding: 20px;
-    border-radius: 30px;
-    background-color: #ffffff;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    background-color: var(--text-light);
+    box-shadow: 0 4px 15px var(--shadow-light);
     position: relative;
     z-index: 1;
 }
 
 .contact-left {
-    background-color: #ffffff;
+    background-color: var(--text-light);
 }
 
 .contact-right {
-    background-color: #15688A;
-    color: #ffffff;
+    background-color: var(--primary-dark-blue);
+    color: var(--text-light);
 }
 
 .contact-left h2, .contact-right h2 {
@@ -47,13 +47,13 @@
     font-size: 1.2rem;
     margin-bottom: 20px;
     line-height: 1.6;
-    color: #2F4F4F;
+    color: var(--text-muted);
     text-align: left;
 }
 
 .contact-left p:last-child {
     font-weight: bold;
-    color: #1BA5BF;
+    color: var(--primary-light-blue);
 }
 
 .contact-right form {
@@ -64,42 +64,44 @@
 
 .contact-right label {
     font-weight: bold;
-    color: #ffffff;
+    color: var(--text-light);
     text-align: left;
 }
 
 .contact-right input, .contact-right textarea {
     padding: 15px;
-    border-radius: 25px;
+    border-radius: 8px;
     border: none;
     font-size: 1rem;
-    color: #2F4F4F;
-    background-color: #F5F5F5;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    color: var(--text-muted);
+    background-color: var(--primary-dark-white);
+    box-shadow: 0 4px 10px var(--shadow-light);
     transition: all 0.3s ease;
 }
 
 .contact-right input:focus, .contact-right textarea:focus {
     outline: none;
-    background-color: #E2E1D2;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    background-color: var(--primary-yellow);
+    box-shadow: 0 4px 15px var(--shadow-medium);
 }
 
 .contact-right button {
     padding: 15px 30px;
-    border-radius: 50px;
-    background-color: #1BA5BF;
-    color: #ffffff;
+    border-radius: 8px;
+    background-color: var(--primary-yellow);
+    color: var(--primary-dark-blue);
     font-size: 1.2rem;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 15px var(--shadow-medium);
 }
 
 .contact-right button:hover {
-    background-color: #138CA2;
+    background-color: var(--primary-light-blue);
     transform: scale(1.05);
+    color: var(--primary-yellow);
+
 }
 
 .contact-right button:active {
