--- a/templates/Base_files/Base_Articles.html
+++ b/templates/Base_files/Base_Articles.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="{% static 'styles/Subject_articles.css' %}">
     <link rel="stylesheet" href="{% static 'styles/Global.css' %}">
     <link rel="stylesheet" href="{% static 'styles/hero.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/Root.css' %}">
+
 
 </head>
 <body>
