--- a/templates/Base_files/Footer.html
+++ b/templates/Base_files/Footer.html
@@ -1,13 +1,13 @@
 {% load static %}
 
 <link rel="stylesheet" href="{% static 'styles/Footer.css' %}">
+<link rel="stylesheet" href="{% static 'styles/Root.css' %}">
+
     <footer>
         <p>&copy; 2024 Biology & Genetics Hub. All rights reserved.</p>
         <div class="social-icons">
-            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+
         </div>
     </footer>
 
